fix pic heights and spacing for phone

--- a/src/screens/Bio.css
+++ b/src/screens/Bio.css
@@ -2,8 +2,11 @@
   color: white;
   display: flex;
   align-items: center;
-  height: 85vh;
+  /* height: 85vh; */
   justify-content: space-evenly;
+  padding: 1vw;
+  margin: 2vw;
+  background-color: rgba(0, 0, 0, 0.35);
 }
 .bio-pic {
   width: 30vw;
@@ -11,27 +14,26 @@
 .bio-container {
   /* height: 70vh; */
   width: 60vw;
-  background-color: rgba(0, 0, 0, 0.35);
   /* border-radius: 25%; */
   display: flex;
+  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 1vw;
-}
-.bio-hi {
-  color: rgb(248, 210, 139);
-  font-size: 1.25em;
-}
-.bio {
-  /* margin: 3vw; */
-  width: 90%;
+  padding: 1vw 2vw;
   line-height: 25px;
   color: rgb(245, 235, 224);
   font-size: 1.5vw;
   font-weight: 300;
 }
+.bio-container p {
+  margin-bottom: 0;
+}
+.bio-hi {
+  color: rgb(248, 210, 139);
+  font-size: 1.25em;
+}
 .signature {
   width: 8vw;
   /* width: 15vw; */
-  opacity: 0.5;
+  opacity: 0.25;
 }
